manifests/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: golang:1.18.5-bullseye
        name: golang
        ports:
          - name: http
            containerPort: 80
